--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -488,78 +488,42 @@
             </div>
         </div>
 
-        <div class="fake-gallery">
-
-            <div id='ninja-slider'>
-                <div class="fake-title">
-                    Top 10 fake image this week
+        <div class="gallery-container2">
+            <h2>Top 10 Fake Images This Week</h2>
+            <div id="slider">
+                <div class="slides-container">
+                    <!-- Slide images go here -->
+                    <div class="slide" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/login_background.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/recognition-picture.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/login_background.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/recognition-picture.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                    <div class="slide" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                    <!-- ... more slides ... -->
                 </div>
-                <div>
-                    <div class="slider-inner">
-                        <ul>
-                            <li><a class="ns-img" href="/static/images/background_gallery.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/picture-hub-picture.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/background_gallery.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/recognition-picture.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/picture-hub-picture.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/background_gallery.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/picture-hub-picture.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/background_gallery.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/picture-hub-picture.jpeg"></a></li>
-                            <li><a class="ns-img" href="/static/images/gallery-background.png"></a></li>
-                        </ul>
-
-                    </div>
-                    <div id="thumbnail-slider">
-                        <div class="inner">
-                            <ul>
-                                <li>
-                                    <a class="thumb" href="/static/images/background_gallery.jpeg"></a>
-                                    <span>1</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/picture-hub-picture.jpeg"></a>
-                                    <span>2</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/background_gallery.jpeg"></a>
-                                    <span>3</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/recognition-picture.jpeg"></a>
-                                    <span>4</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/picture-hub-picture.jpeg"></a>
-                                    <span>5</span>
-                                </li>
-                                <li>
-                                    <a class="thumb"  href="/static/images/background_gallery.jpeg"></a>
-                                    <span>6</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/picture-hub-picture.jpeg"></a>
-                                    <span>7</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/background_gallery.jpeg"></a>
-                                    <span>8</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/picture-hub-picture.jpeg"></a>
-                                    <span>9</span>
-                                </li>
-                                <li>
-                                    <a class="thumb" href="/static/images/gallery-background.png"></a>
-                                    <span>10</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <button class="prev">&#10094;</button>
+                <button class="next">&#10095;</button>
+            </div>
+            <div class="thumbnails-container">
+                <!-- Thumbnail images go here -->
+                <div class="thumbnail" data-index="0" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                <div class="thumbnail" data-index="1" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                <div class="thumbnail" data-index="2" style="background-image: url('/static/images/login_background.jpeg');"></div>
+                <div class="thumbnail" data-index="3" style="background-image: url('/static/images/recognition-picture.jpeg');"></div>
+                <div class="thumbnail" data-index="4" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                <div class="thumbnail" data-index="5" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                <div class="thumbnail" data-index="6" style="background-image: url('/static/images/login_background.jpeg');"></div>
+                <div class="thumbnail" data-index="7" style="background-image: url('/static/images/recognition-picture.jpeg');"></div>
+                <div class="thumbnail" data-index="8" style="background-image: url('/static/images/picture-hub-picture.jpeg');"></div>
+                <div class="thumbnail" data-index="9" style="background-image: url('/static/images/background_gallery.jpeg');"></div>
+                <!-- ... more thumbnails ... -->
             </div>
         </div>
-    </div>>
+    </div>
 
     <div class="bottom-navigation-bar">
         <div class="connect-container">
