--- a/src/Flask/templates/html/login.html
+++ b/src/Flask/templates/html/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <form class="form_container">
-            <div class="logo_container"></div>
+            <div class="logo_container"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
             <div class="title_container">
                 <p class="title">Login to your Account</p>
                 <span class="subtitle">Get started with the Trust Indicator, and enjoy the experience.</span>
