--- a/src/Flask/templates/html/analysis.html
+++ b/src/Flask/templates/html/analysis.html
@@ -69,7 +69,7 @@
             <!--log in content-->
         </div>
 
-        <div class="logo"></div>
+        <div class="logo"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
     </div>
 
     <div class="main">
