--- a/src/Flask/templates/html/feedback.html
+++ b/src/Flask/templates/html/feedback.html
@@ -116,7 +116,7 @@
                 </ul>
             </div>
         </div>
-        <div class="logo"></div>
+        <div class="logo"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
     </div>
 
     <div class="main-content-container">
