--- a/src/Flask/templates/html/gallery.html
+++ b/src/Flask/templates/html/gallery.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!--</div>-->
-    <div class="top-title">
+<div class="top-title">
     <p onclick="top_register()">Apply for becoming a membership </p>
 </div>
 <div class="navigation-bar-container">
@@ -115,7 +115,7 @@
             </ul>
         </div>
     </div>
-    <div class="logo"></div>
+    <div class="logo"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
 </div>
     <div class="container">
         <button id="toggleSidebar">&#9776;</button>
