--- a/src/Flask/templates/html/signup.html
+++ b/src/Flask/templates/html/signup.html
@@ -13,7 +13,7 @@
     <div class="top" style="background: #F2F2F2;;width: 100%;height: 80px">
     </div>
     <div class="logo-container">
-        <div class="logo"></div>
+        <div class="logo"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
     </div>
 
     <div class="form-container">
