Fixed display error in Upload and Analyze page.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/src/Flask/static/css/feedback.css
+++ b/src/Flask/static/css/feedback.css
@@ -3,7 +3,7 @@ h2{
     color: #00467F;
     font-size: 3vh;
 }
-p{
+.feedback-message p{
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1vh;
