--- a/src/Flask/templates/html/index.html
+++ b/src/Flask/templates/html/index.html
@@ -73,6 +73,70 @@
             <!--log in content-->
         </div>
         <div class="navigation-bar-bottom">
+            <div class="menu-icon-wrapper">
+                <div class="three-line">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+
+            <div class="sidebar">
+                <!-- 主菜单 -->
+                <div class="main-menu">
+                    <a href='/' class="color-home" data-target="home-submenu">Home</a>
+                    <a href="#" class="color-gallery" data-target="gallery-submenu">Gallery  <i class="fa fa-angle-right" style="font-size:30px;margin-left: 280px"></i></a>
+                    <a href="#" class="color-upload" data-target="upload-submenu" onclick="upload()">Upload</a>
+                    <a href="/whatwedo" class="color-whatwedo" data-target="whatWeDo-submenu">What We Do</a>
+                    <a href="#" class="color-help" data-target="help-submenu">Help <i class="fa fa-angle-right" style="font-size:30px;margin-left: 300px"></i></a>
+                </div>
+
+                <!-- 子菜单 -->
+                <div class="submenu" id="gallery-submenu">
+                    <div class="submenu-div1 back-from-gallery">
+                        <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>GALLERY</span>
+                    </div>
+                    <div class="submenu-div2">
+                        <h3 ><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
+                        <a href="#" onclick="GotoGallery(event)">Default</a>
+                        <a href="#">Sort By Credibility</a>
+                        <a href="#">Sort By Publish Time</a>
+                    </div>
+                    <div class="submenu-div3">
+                        <h3><i class="fa fa-star" style="font-size:24px;color: #FFCD29"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
+                        <a href="#">Show All</a>
+                        <a href="#">Top 10</a>
+                        <h3 style="margin-top: 15px"><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
+                        <a href="#">Show All</a>
+                        <a href="#">Sort By Credibility</a>
+                        <a href="#">Sort By Publish Time</a>
+                    </div>
+                    <div class="submenu-div4">
+                        <div style="width: 80%; height: 80%; display: flex;position: relative; left: 10%; top: 10%;background: #00467F">
+                            <a href="#"><img src="/static/images/background_gallery.jpeg" style="width: 330px;height: 100%"/></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="submenu2" id="help-submenu">
+                    <div class="submenu2-div1 back-from-help">
+                        <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>Help</span>
+                    </div>
+                    <div class="submenu2-div8">
+                        Contributor Zone
+                    </div>
+                    <div class="submenu2-div8" onclick="GoToFeedback(event)">
+                        Feedback
+                    </div>
+                    <div class="submenu2-div8">
+                        <a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
+    <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
+    <path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
+    </svg></a>
+                    </div>
+                </div>
+            </div>
+
             <div id="mcmenu">
                 <ul>
                     <li id="menu-ahome"><a href="/">Home</a></li>
@@ -99,9 +163,9 @@
                             </div>
                         </div>
                     </li>
-                    <li id="menu-upload"><a href="/upload">Upload and Analyse</a></li>
-                    <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
-                    <li id="menu-community">
+                    <li id="menu-upload"><a onclick="upload()">Upload and Analyse</a></li>
+                    <li id="menu-whatwedo"><a href="/whatwedo">What We Do</a></li>
+                    <li id="menu-zhelp">
                         <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                         <ul class="right0">
                             <li><a href="#">Contributor Zone</a></li>
