--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,9 +7,10 @@ html, body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    justify-content: center;
 }
 .main-content-container {
-  flex: 1;
+    flex: 1;
 }
 .top-title{
     width: 100%;
@@ -326,7 +327,7 @@ html, body {
     height: 110px;
     background-color: #00467F;
     bottom: 10px;
-    left: 10%;
+    right: 78%;
     clip-path: polygon(0% 0%, 85% 0, 100% 15%, 100% 100%, 15% 100%, 0 85%);
     z-index: 3;
     align-items: center;
@@ -2003,24 +2004,24 @@ html, body {
     animation: move-right 0.7s infinite linear;
 }
 @media (max-width: 800px) {
-    /* 允许主容器的高度自动扩展，并使其子元素垂直排列 */
     .bottom-register-example-container{
         flex-direction: column;
-        align-items: center; /* 为了让子元素在容器中居中 */
-        height: auto;  /* 允许高度自动扩展 */
+        align-items: center;
+        height: auto;
     }
-    /* 设置子元素宽度为 80% 并且高度为 300px */
+
     .bottom-register,
     .bottom-example-container {
         width: 80%;
         height: 400px;
-        margin-top: 30px;  /* 添加一些上边距，使内容不会与顶部贴得太紧 */
+        margin-top: 30px;
     }
 }
 
 .bottom-navigation-bar{
     width: 100%;
     height: 80px;
+    bottom: 0;
     background: #333333 ;
     margin-top: 1%;
     display: flex;
