--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -1,7 +1,14 @@
+.main-content-container {
+    width: 95%;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    margin:auto;
+}
 .drop-show-metadata-container{
-    display: flex; /* make this a flex container */
+    display: flex;
     width: 100%;
-    height: 550px;
+    height: auto;
     margin-top: 5%;
     justify-content: space-between;
     margin-bottom: 5%;
@@ -10,7 +17,7 @@
 
 .drop-box-container {
     width: 30%;
-    height: 80%; /* optional, makes the div fill the parent's height */
+    height: 80%;
     min-width: 300px;
     margin-top: 5%;
     margin-left: 5%;
@@ -20,7 +27,7 @@
 
 .show-metadata {
     width: 60%;
-    height: 100%; /* optional, makes the div fill the parent's height */
+    height: 100%;
     min-width: 420px;
     border: 2px dashed #00467F;
 }
@@ -28,7 +35,7 @@
 .container {
     height: 100%;
     width:80%;
-    margin-left: 10%;
+    margin-left: 5%;
     border-radius: 10px;
     box-shadow: 4px 4px 30px rgba(0, 0, 0, .2);
     display: flex;
@@ -108,14 +115,14 @@
 }
 
 .show-metadata-container{
-    width: 90%;
-    height: 98%;
+    width: auto;
+    height: auto;
     margin-left: 5%;
     display: flex;
     justify-content: space-between;
     margin-top: 1%;
     max-width: 1000px;
-
+    margin-bottom: 1%;
 }
 .metadata-item{
     height: 100%;
@@ -232,8 +239,8 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 50px; /* Width of the switch */
-    height: 24px; /* Height of the switch */
+    width: 50px;
+    height: 24px;
     margin-right: 2%;
 }
 
@@ -252,19 +259,19 @@
     bottom: 0;
     background-color: #ccc; /* Off state color */
     transition: .4s;
-    border-radius: 34px; /* Round borders */
+    border-radius: 34px;
 }
 
 .slider:before {
     position: absolute;
     content: "";
-    height: 16px; /* Circle size */
-    width: 16px; /* Circle size */
+    height: 16px;
+    width: 16px;
     left: 4px;
     bottom: 4px;
     background-color: white;
     transition: .4s;
-    border-radius: 50%; /* Circle shape */
+    border-radius: 50%;
 }
 
 input:checked + .slider {
