Fixed typo in nav sidebar in each page
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/templates/html/whatwedo.html
+++ b/templates/html/whatwedo.html
@@ -123,7 +123,7 @@
                         <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>Help</span>
                     </div>
                     <div class="submenu2-div8">
-                        Contributor Zone
+                        <a href="https://github.com/Trust-Indicator/Trust-Indicator">Project Landing Page</a>
                     </div>
                     <div class="submenu2-div8" onclick="GoToFeedback(event)">
                         Feedback
@@ -168,7 +168,7 @@
                     <li id="menu-zhelp">
                         <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
                         <ul class="right0">
-                            <li><a href="#">Contributor Zone</a></li>
+                            <li><a href="https://github.com/Trust-Indicator/Trust-Indicator">Project Landing Page</a></li>
                             <li><a href="#" onclick="GoToFeedback(event)">Feedback</a></li>
                             <li><a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
     <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
