--- a/templates/html/analysis.html
+++ b/templates/html/analysis.html
@@ -119,7 +119,7 @@
                         <i class="fa fa-angle-left" style="font-size: 30px"></i> &nbsp;&nbsp;&nbsp;&nbsp;<span>Help</span>
                     </div>
                     <div class="submenu2-div8">
-                        Contributor Zone
+                        <a href="https://github.com/Trust-Indicator/Trust-Indicator">Project Landing Page</a>
                     </div>
                     <div class="submenu2-div8" onclick="GoToFeedback(event)">
                         Feedback
